k8s/assets-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assets-service
  template:
    metadata:
      labels:
        app: assets-service
    spec:
      containers:
        - name: assets-service
          image: 079059455431.dkr.ecr.us-east-1.amazonaws.com/assets-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: assets-service
spec:
  selector:
    app: assets-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
    - name: metrics
      port: 9091
      targetPort: 9091
  type: ClusterIP
