k8s/files-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: files-service
  template:
    metadata:
      labels:
        app: files-service
    spec:
      containers:
        - name: files-service
          image: 079059455431.dkr.ecr.us-east-1.amazonaws.com/files-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: files-service
spec:
  selector:
    app: files-service
  ports:
    - name: http
      port: 8002
      targetPort: 8002
    - name: metrics
      port: 9092
      targetPort: 9092
  type: ClusterIP
