k8s/search-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
        - name: search-service
          image: 079059455431.dkr.ecr.us-east-1.amazonaws.com/search-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
            - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  selector:
    app: search-service
  ports:
    - name: http
      port: 8004
      targetPort: 8004
    - name: metrics
      port: 9093
      targetPort: 9093
  type: ClusterIP
